# geogram-rosetta

./: .gitignore  CMakeLists.txt  README.md  example_lua.lua  example_node.js  example_python.py  example_python_GUI.py  example_wasm.js  index.html  manifest.json
.github/workflows/: python-linux.yml
src/: Mesh.cpp  Mesh.h  algorithms.cpp  algorithms.h  geogram_mesh.h  mesh_ext.cpp  mesh_ext.h
src/geogram/: version.h
